# openai-web-server

./: Cargo.toml  LICENSE  README.md
src/: env_vars.rs  error.rs  main.rs  session.rs
src/oai/: asst.rs  client.rs  mod.rs  msg.rs  thread.rs  vec_store.rs
