[package]
name = "openai-web-server"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = "allow" # for early dev

[dependencies]
async-openai = "0.24.0"
dotenv = "0.15.0"
markdown = "1.0.0-alpha.20"
rocket = {version = "0.5.1", features = ["json"]}
rocket_cors = "0.6.0"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.128"
